# Rust-Intellivector

./: .gitignore  Cargo.toml  README.md  TODO.md
docs/: expl.md
eval/: queries.jsonl
plan/: parallel_batch_embedding.md
src/: code_chunker.rs  context_group.rs  embed.rs  ingest.rs  lib.rs  main.rs  similarity.rs  store.rs
src/search/: bm25.rs  mod.rs  rrf.rs  vector_index.rs
src/storage/: hash.rs  mod.rs  sled_store.rs  types.rs
tests/: integration_project_indexing.rs
